--- a/PersonalFinanceAccounting.Library/PersonalFinanceAccounting.Library.csproj
+++ b/PersonalFinanceAccounting.Library/PersonalFinanceAccounting.Library.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="EntityFramework" Version="6.4.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
