--- a/PersonalFinanceAccounting.Library/PersonalFinanceAccounting.Library.csproj
+++ b/PersonalFinanceAccounting.Library/PersonalFinanceAccounting.Library.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <Optimize>True</Optimize>
+    </PropertyGroup>
+
 </Project>
