Создан класс для работы с БД

--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,4 @@ FodyWeavers.xsd
 .idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp
+/PersonalFinanceAccounting.Library/PersonalFinanceDb/App.config
