--- a/PersonalFinanceAccounting.Library/PersonalFinanceAccounting.Library.csproj
+++ b/PersonalFinanceAccounting.Library/PersonalFinanceAccounting.Library.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
