--- a/PersonalFinanceAccounting.GuiApp/PersonalFinanceAccounting.GuiApp.csproj
+++ b/PersonalFinanceAccounting.GuiApp/PersonalFinanceAccounting.GuiApp.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="cat.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Assets\icon.ico" />
   </ItemGroup>
 
@@ -18,6 +22,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PersonalFinanceAccounting.Library\PersonalFinanceAccounting.Library.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="cat.jpg" />
   </ItemGroup>
 
 </Project>
